--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 license = "MIT"
 
 [dependencies]
+anyhow = "1.0.97"
 clap = { version = "4.5.35", features = ["cargo", "derive"] }
+colored = "3.0.0"
 console = "0.15.11"
 dialoguer = "0.11.0"
 fs_extra = "1.3.0"
