--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "https://klave.com/"
 repository = "https://github.com/klave-network/cli"
 description = "Interact with Klave via CLI"
 readme = "README.md"
+rust-version = "1.86.0"
 
 [[bin]]
 name = "railway"
