--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "klave-cli"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
+homepage = "https://klave.com/"
+repository = "https://github.com/klave-network/cli"
+description = "Interact with Klave via CLI"
+readme = "README.md"
+rust-version = "1.86.0"
+
+[[bin]]
+name = "railway"
+path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.97"
