--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,9 @@ jobs:
 
             - name: Checkout code
               uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0 # fetch full commit history
+                  tags: true # fetch all tags
 
             - name: Build changelog
               id: build_changelog
