--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,7 @@ jobs:
                   args: --release --locked --target ${{ matrix.target }}
 
             - name: Prepare binaries
+              shell: bash
               run: |
                   cd target/${{ matrix.target }}/release
                   if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
