--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,11 +5,8 @@ permissions:
 
 on:
     push:
-        branches:
-            - main
         tags:
             - "v*.*.*"
-    workflow_dispatch:
 
 env:
     MACOSX_DEPLOYMENT_TARGET: 10.7
@@ -65,10 +62,19 @@ jobs:
                     - target: x86_64-unknown-linux-gnu
                       os: ubuntu-latest
 
+                    - target: aarch64-unknown-linux-musl
+                      os: ubuntu-latest
+
                     - target: x86_64-apple-darwin
+                      os: macos-latest
+                      
+                    - target: aarch64-apple-darwin
                       os: macos-latest
 
                     - target: x86_64-pc-windows-msvc
+                      os: windows-latest
+                      
+                    - target: x86_64-pc-windows-gnu
                       os: windows-latest
 
         steps:
