--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,6 +82,20 @@ jobs:
               uses: actions/checkout@v4
               with:
                   fetch-depth: 1
+                  
+            - name: Install cross-compiler
+              if: matrix.target == 'aarch64-unknown-linux-musl'
+              run: |
+                sudo apt-get update
+                sudo apt-get install -y musl-tools gcc-aarch64-linux-gnu
+                
+            - name: Install musl-tools
+              if: matrix.target == 'x86_64-unknown-linux-musl'
+              run: sudo apt-get update && sudo apt-get install -y musl-tools
+            
+            - name: Install cargo-deb
+              if: matrix.target == 'x86_64-unknown-linux-musl'
+              run: cargo install cargo-deb
 
             - name: Install Rust and target
               uses: dtolnay/rust-toolchain@stable
