--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
                     - target: x86_64-unknown-linux-gnu
                       os: ubuntu-latest
 
-                    - target: aarch64-unknown-linux-musl
+                    - target: aarch64-unknown-linux-gnu
                       os: ubuntu-latest
 
                     - target: x86_64-apple-darwin
@@ -83,19 +83,18 @@ jobs:
               with:
                   fetch-depth: 1
                   
-            - name: Install cross-compiler
-              if: matrix.target == 'aarch64-unknown-linux-musl'
+            - name: Setup for cross-compiled linux aarch64 build
+              if: matrix.config.target == 'aarch64-unknown-linux-gnu'
               run: |
-                sudo apt-get update
-                sudo apt-get install -y musl-tools gcc-aarch64-linux-gnu
+                  sudo apt update
+                  sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+                  echo '[target.aarch64-unknown-linux-gnu]' >> ${HOME}/.cargo/config.toml
+                  echo 'linker = "aarch64-linux-gnu-gcc"' >> ${HOME}/.cargo/config.toml
+                  echo 'rustflags = ["-Ctarget-feature=+fp16"]' >> ${HOME}/.cargo/config.toml
                 
             - name: Install musl-tools
-              if: matrix.target == 'x86_64-unknown-linux-musl'
+              if: matrix.target == 'x86_64-unknown-linux-gnu'
               run: sudo apt-get update && sudo apt-get install -y musl-tools
-            
-            - name: Install cargo-deb
-              if: matrix.target == 'x86_64-unknown-linux-musl'
-              run: cargo install cargo-deb
 
             - name: Install Rust and target
               uses: dtolnay/rust-toolchain@stable
