--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,8 @@ permissions:
 
 on:
     push:
+        branches:
+            - main
         tags:
             - "v*.*.*"
 
@@ -62,7 +64,7 @@ jobs:
                     - target: x86_64-unknown-linux-gnu
                       os: ubuntu-latest
 
-                    - target: aarch64-unknown-linux-gnu
+                    - target: aarch64-unknown-linux-musl
                       os: ubuntu-latest
 
                     - target: x86_64-apple-darwin
@@ -83,19 +85,6 @@ jobs:
               with:
                   fetch-depth: 1
                   
-            - name: Setup for cross-compiled linux aarch64 build
-              if: matrix.config.target == 'aarch64-unknown-linux-gnu'
-              run: |
-                  sudo apt update
-                  sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-                  echo '[target.aarch64-unknown-linux-gnu]' >> ${HOME}/.cargo/config.toml
-                  echo 'linker = "aarch64-linux-gnu-gcc"' >> ${HOME}/.cargo/config.toml
-                  echo 'rustflags = ["-Ctarget-feature=+fp16"]' >> ${HOME}/.cargo/config.toml
-                
-            - name: Install musl-tools
-              if: matrix.target == 'x86_64-unknown-linux-gnu'
-              run: sudo apt-get update && sudo apt-get install -y musl-tools
-
             - name: Install Rust and target
               uses: dtolnay/rust-toolchain@stable
               with:
@@ -106,6 +95,7 @@ jobs:
               with:
                   command: build
                   args: --release --locked --target ${{ matrix.target }}
+                  use-cross: ${{ matrix.use-cross || matrix.os == 'ubuntu-latest' }}
 
             - name: Prepare binaries
               shell: bash
@@ -119,6 +109,13 @@ jobs:
                     tar czvf ../../../klave-${{ needs.create-release.outputs.klave_version }}-${{ matrix.target }}.tar.gz klave
                   fi
                   cd -
+            - name: Install musl-tools
+              if: matrix.target == 'x86_64-unknown-linux-musl'
+              run: sudo apt-get update && sudo apt-get install -y musl-tools
+            
+            - name: Install cargo-deb
+              if: matrix.target == 'x86_64-unknown-linux-musl'
+              run: cargo install cargo-deb
 
             - name: Upload release asset
               env:
